# robyn-ml-api

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: health.py
app/core/: __init__.py  lifespan.py  logger.py  router.py  settings.py
app/events/: __init__.py  process_pool.py
app/middlewares/: base.py  files.py
app/models/: __init__.py  core.py
app/operation/: __init__.py
app/providers/: __init__.py
test/unit/: conftest.py
test/unit/app/: __init__.py
test/unit/app/core/: test_lifespan.py  test_router.py
test/unit/app/events/: __init__.py  test_process_pool.py
